<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:map="http://schemas.android.com/apk/res-auto" android:background="#ffe5b4" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="#ffe5b4" android:padding="10dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="15pt" android:textStyle="italic" android:textColor="#284bda" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:text="@string/tvSignin"/>
        <EditText android:id="@+id/etEmail_operator_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:hint="@string/etEmail" android:inputType="textEmailAddress"/>
        <EditText android:id="@+id/etPassword_operator_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:hint="@string/etPassword" android:inputType="textPassword"/>
        <CheckBox android:id="@+id/chkRemberMe_operator_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:text="@string/chkRememberMe"/>
        <Button android:id="@+id/btnLogin_operator_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:hint="@string/btnSignIn" android:drawableRight="@drawable/ic_action_next_item" android:onClick="onClick"/>
    </LinearLayout>
</ScrollView>
